portfolio gap and fix

--- a/style.css
+++ b/style.css
@@ -147,8 +147,9 @@ body {
   gap: 3%;
 }
 .portfolio{
-    width: 19%;
-    margin-left: 0.25%
+    margin-left: 0.25%;
+    grid-template-columns: auto auto auto auto auto;
+    gap: 3%
 }
 
 h2.card-title {
